# Sikorsky_R-4_Helicopter_for_Orbiter

./: README.md
Src_Linux/: R4.cpp  R4.h  get_engine.cpp  get_help.cpp  get_propeller.cpp  make_anim.cpp  make_annotation.cpp  make_pretty.cpp  set_anim.cpp  set_annotation.cpp  set_autopilot.cpp  set_feature.cpp  set_features.cpp  set_pretty.cpp
Src_Windows/: CMakeLists.txt  R4.cpp  R4.h  get_engine.cpp  get_physics.cpp  get_propeller.cpp  make_anim.cpp  make_annotation.cpp  set_anim.cpp  set_annotation.cpp  set_autopilot.cpp  set_feature.cpp  set_pretty.cpp
